@@ -1,5 +1,10 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0037 :
+* Added Rolling Bin in Pink and Black
+* Rolling Bin random helper updated
+* cbpPoleSquareTipCentered fixed; something about Left or Right versions
+
 A21.2.001.0036 :
 * More Plant Offsets
 * Body Bag Offsets
